--- a/help/hu_intro.html
+++ b/help/hu_intro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" context="text/html; charset=utf-8">
-    <title>Bevezető</title>
+    <title>LC-circuits - Bevezető</title>
     <link href="styles.css" rel=stylesheet type="text/css">
   </head>
   <body class="normal">
@@ -10,18 +10,18 @@
     <br>
     <br>
     <b class="title2">1. Általános ismertető</b><br>
-    &nbsp;&nbsp;&nbsp;Elektroncső munkapontbeállító alkalmazás FreeBSD, Linux 
+    &nbsp;&nbsp;&nbsp;LC-áramkör méretező alkalmazás FreeBSD, Linux 
     és Windows operációs rendszerekhez. Nyelvi támogatás: angol és magyar.<br>
     <br>
     <b class="title2">2. Beállítások</b><br>
-    &nbsp;&nbsp;&nbsp;Linux operációs rendszeren a 'LANG' környezeti
+    &nbsp;&nbsp;&nbsp;BSD és Linux operációs rendszeren a 'LANG' környezeti
     változó  használatával állíthatja be az alkalmazás nyelvét.
     Kattintson  a 'Konfiguráció/Beállítások' menüpontra az alkalmazás további
     beállításainak elvégzéséhez.<br>
     <br>
     <b class="title2">3. Fontos információk</b><br>
     <br>
-    Copyright &copy; 2012-2016 Pozs&aacute;r Zsolt<br>
+    Copyright &copy; 2011-2016 Pozs&aacute;r Zsolt<br>
     <br>
     &nbsp;&nbsp;&nbsp;Ez a program szabad szoftver; terjeszthetõ és/vagy
     módosítható az European Union Public License 1.1 verziója alapján.<br>
