--- a/help/en_intro.html
+++ b/help/en_intro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" context="text/html; charset=utf-8">
-    <title>Introduction</title>
+    <title>LC-circuits - Introduction</title>
     <link href="styles.css" rel=stylesheet type="text/css">
   </head>
   <body class="normal">
@@ -10,17 +10,17 @@
     <br>
     <br>
     <b class="title2">1. General information</b><br>
-    &nbsp;&nbsp;&nbsp;This software is an electrontube circuit sizing application.<br>
+    &nbsp;&nbsp;&nbsp;This software is an LC-circuit sizing application.<br>
     Supported OSs: FreeBSD, Linux and Windows. Language support: English and Hungarian.<br>
     <br>
     <b class="title2">2. Settings</b><br>
-    &nbsp;&nbsp;&nbsp;On linux use 'LANG' environment variable to set
+    &nbsp;&nbsp;&nbsp;On BSD and Linux  use 'LANG' environment variable to set
     language of the  application. Open Settings window in
     'Configuration/Settings' to configure it.<br>
     <br>
     <b class="title2">3. Important information</b><br>
     <br>
-    Copyright &copy; 2012-2016 Pozsar Zsolt<br>
+    Copyright &copy; 2011-2016 Pozsar Zsolt<br>
     <br>
     &nbsp;&nbsp;&nbsp;This program is free software: you can redistribute it and/or modify it
     under the terms of the European Union Public License version 1.1.<br>
