--- a/help/hu_hotkeys.html
+++ b/help/hu_hotkeys.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" context="text/html; charset=utf-8">
-    <title>Gyorsbillentyűk</title>
+    <title>LC-circuits - Gyorsbillentyűk</title>
     <link href="styles.css" rel=stylesheet type="text/css">
   </head>
   <body class="normal">
